# sydevs-yaml

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: codeql-analysis.yml
example/: main.cpp
example/counter/: s.yaml
example/counter/lua/: adder.lua  counter.lua  simulation.lua
example/nodes/: adder_node.h
src/generics/: lua.cpp  lua.h  run_simulation.cpp  run_simulation.h  simulation_config.cpp  simulation_config.h
src/lua/: log.lua  scale.lua
src/sydevs-yaml/generics/: lua.h  run_simulation.cpp  run_simulation.h  simulation_config.cpp
src/sydevs-yaml/systems/: generic_atomic_node.h  generic_closed_system.h  generic_interactiv_system.h  generic_own_node.h  generic_ports.cpp
src/systems/: generic_atomic_node.h  generic_closed_system.h  generic_interactiv_system.h  generic_own_node.h  generic_ports.cpp  generic_ports.h
